# ppp

./: AUTHORS  ChangeLog  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.in  NEWS  README  StartMinGW.bat  config.h  config.h.in  config.status  configure  configure.ac  decrypt.c  encrypt.c  getloadavg.c  install-sh  ppp  ppp.c  ppp.msp  rdtsc.h
.deps/: ppp.Po  rijndael.Po  sha2.Po
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
nspr4 patch/: patch.txt
